--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -2,8 +2,8 @@
 
   "App": {
     "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://www.goodpoint.tw,https://pikachu-store-production.azurewebsites.net, https://*.ecpay.com.tw",
-    "RedirectAllowedUrls": "https://pikachu-dev.azurewebsites.net:44374",
-    "SelfUrl": "https://pikachu-dev.azurewebsites.net:44374"
+    "RedirectAllowedUrls": "https://pikachu-dev.azurewebsites.net",
+    "SelfUrl": "https://pikachu-dev.azurewebsites.net"
   },
 
   "ConnectionStrings": {
@@ -11,7 +11,7 @@
     "Default": "Server=tcp:dev-dbservers.database.windows.net,1433;Initial Catalog=pikachu_dev2;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AuthServer": {
-    "Authority": "https://pikachu-dev.azurewebsites.net:44374",
+    "Authority": "https://pikachu-dev.azurewebsites.net",
     "RequireHttpsMetadata": "false"
   },
   "StringEncryption": {
