PK-152, PK-153, PK-156

--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -39,6 +39,7 @@
     "InvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Issue",
     "CreditNoteApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Allowance",
     "VoidInvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Invalid",
-    "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData"
+    "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData",
+    "SingleCreditCardTransactionApi": "https://payment.ecPay.com.tw/CreditDetail/QueryTrade/V2"
   }
 }
