--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -40,6 +40,7 @@
     "CreditNoteApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Allowance",
     "VoidInvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Invalid",
     "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData",
-    "SingleCreditCardTransactionApi": "https://payment.ecPay.com.tw/CreditDetail/QueryTrade/V2"
+    "SingleCreditCardTransactionApi": "https://payment.ecPay.com.tw/CreditDetail/QueryTrade/V2",
+    "SenderZipCode": "https://egs.suda.com.tw:8443/api/Egs/ParsingAddress"
   }
 }
