--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -42,5 +42,9 @@
     "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData",
     "SingleCreditCardTransactionApi": "https://payment.ecPay.com.tw/CreditDetail/QueryTrade/V2",
     "SenderZipCode": "https://egs.suda.com.tw:8443/api/Egs/ParsingAddress"
+  },
+  "T-Cat": {
+    "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
+    "PrintOBTByB2S": "https://egs.suda.com.tw:8443/api/Egs/PrintOBTByB2S"
   }
 }
