--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -23,6 +23,8 @@
 
   <ItemGroup>
 
+      <PackageReference Include="AntDesign" Version="0.20.4.2" />
+
       <PackageReference Include="Blazored.TextEditor" Version="1.1.0" />
 
       <PackageReference Include="Blazorise.LoadingIndicator" Version="1.5.2" />
