--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -1,5 +1,4 @@
 {
-
   "App": {
     "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://www.goodpoint.tw,https://pikachu-store-production.azurewebsites.net, https://*.ecpay.com.tw",
     "RedirectAllowedUrls": "https://pikachu-dev.azurewebsites.net",
@@ -46,5 +45,8 @@
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
     "PrintOBTByB2S": "https://egs.suda.com.tw:8443/api/Egs/PrintOBTByB2S"
+  },
+  "HostDomain": {
+    "Name": "ibosshops"
   }
 }
