#PK-400 Third party login

--- a/src/Kooco.Pikachu.DbMigrator/appsettings.json
+++ b/src/Kooco.Pikachu.DbMigrator/appsettings.json
@@ -23,6 +23,10 @@
       "Pikachu_Swagger": {
         "ClientId": "Pikachu_Swagger",
         "RootUrl": "https://localhost:44393"
+      },
+      "Third_Party": {
+        "ClientId": "Third_Party",
+        "RootUrl": "https://localhost:44374"
       }
     }
   }
