Commit for Pk-471

--- a/src/Kooco.Pikachu.DbMigrator/appsettings.json
+++ b/src/Kooco.Pikachu.DbMigrator/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"Default": "Server=tcp:pikachu-prod-db-server.database.windows.net,1433;Initial Catalog=pikachu_prod_db;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    "Default": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-db-dev;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "Default": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-db-prod;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"Default": "Server=tcp:pikachu-prod-db-server.database.windows.net,1433;Initial Catalog=pikachu_prod_db;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "OpenIddict": {
