#PK-510 Email templates and Url validation

--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -107,5 +107,8 @@
     <Content Update="wwwroot\EmailTemplates\email.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\EmailTemplates\verification_code.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
