#PK-510 Added Order Status template

--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -107,6 +107,9 @@
     <Content Update="wwwroot\EmailTemplates\email.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\EmailTemplates\order_status.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\EmailTemplates\verification_code.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
