--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -39,7 +39,8 @@
     "VoidInvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Invalid",
     "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData",
     "SingleCreditCardTransactionApi": "https://payment.ecPay.com.tw/CreditDetail/QueryTrade/V2",
-    "SenderZipCode": "https://egs.suda.com.tw:8443/api/Egs/ParsingAddress"
+    "SenderZipCode": "https://egs.suda.com.tw:8443/api/Egs/ParsingAddress",
+    "PaymentApiUrl": "https://payment.ecpay.com.tw/Cashier/AioCheckOut/V5"
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
