--- a/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
+++ b/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
 	  <PackageReference Include="Azure.Identity" Version="1.11.4" />
 	  <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
+	  <PackageReference Include="ECPay.Payment.Integration" Version="1.0.0.8" />
 	  <PackageReference Include="Hangfire.Core" Version="1.8.6" />
 	  <PackageReference Include="MiniExcel" Version="1.31.2" />
 	  <PackageReference Include="RestSharp" Version="110.2.0" />
