--- a/src/Kooco.Pikachu.HttpApi/Kooco.Pikachu.HttpApi.csproj
+++ b/src/Kooco.Pikachu.HttpApi/Kooco.Pikachu.HttpApi.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ECPay.Payment.Integration" Version="1.0.0.8" />
     <PackageReference Include="Volo.Abp.Account.HttpApi" Version="8.1.1" />
     <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="8.1.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="8.1.1" />
