revert connection string

--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -6,8 +6,7 @@
   },
 
   "ConnectionStrings": {
-    "Default": "Data Source=94.130.216.117;Initial Catalog=DB_Test2;Persist Security Info=True;User ID=umairhai;Password=0y$7fU3a1;Trust Server Certificate=True"
-    //"Default": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-db-dev;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "Default": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-db-dev;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AuthServer": {
     "Authority": "https://pikachu-production.azurewebsites.net:44374",
