--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -40,7 +40,9 @@
     "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData",
     "SingleCreditCardTransactionApi": "https://payment.ecPay.com.tw/CreditDetail/QueryTrade/V2",
     "SenderZipCode": "https://egs.suda.com.tw:8443/api/Egs/ParsingAddress",
-    "PaymentApiUrl": "https://payment.ecpay.com.tw/Cashier/AioCheckOut/V5"
+    "PaymentApiUrl": "https://payment.ecpay.com.tw/Cashier/AioCheckOut/V5",
+    "PrintTradeDocument": "https://logistics-stage.ecpay.com.tw/helper/printTradeDocument"
+
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
