--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -104,6 +104,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="wwwroot\EmailTemplates\delivery_status.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\EmailTemplates\email.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
