--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -41,7 +41,9 @@
     "SingleCreditCardTransactionApi": "https://payment.ecPay.com.tw/CreditDetail/QueryTrade/V2",
     "SenderZipCode": "https://egs.suda.com.tw:8443/api/Egs/ParsingAddress",
     "PaymentApiUrl": "https://payment.ecpay.com.tw/Cashier/AioCheckOut/V5",
-    "PrintTradeDocument": "https://logistics-stage.ecpay.com.tw/helper/printTradeDocument"
+    "PrintTradeDocument": "https://logistics-stage.ecpay.com.tw/helper/printTradeDocument",
+    "PrintUniMartC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintUniMartC2COrderInfo",
+    "PrintFAMIC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintFAMIC2COrderInfo"
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
