--- a/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
+++ b/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
@@ -32,6 +32,7 @@
 	  <PackageReference Include="ECPay.Payment.Integration" Version="1.0.0.8" />
 	  <PackageReference Include="Hangfire.Core" Version="1.8.6" />
 	  <PackageReference Include="MiniExcel" Version="1.31.2" />
+	  <PackageReference Include="PDFsharp" Version="6.1.1" />
 	  <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="8.1.1" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="8.1.1" />
