--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -47,7 +47,8 @@
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
-    "PrintOBTByB2S": "https://egs.suda.com.tw:8443/api/Egs/PrintOBTByB2S"
+    "PrintOBTByB2S": "https://egs.suda.com.tw:8443/api/Egs/PrintOBTByB2S",
+    "DownloadOBT": "https://egs.suda.com.tw:8443/api/Egs/DownloadOBT"
   },
   "HostDomain": {
     "Name": "ibosshops"
