--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -6,7 +6,7 @@
   },
 
   "ConnectionStrings": {
-    "Default": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-db-dev;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "Default": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-db-dev;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AuthServer": {
     "Authority": "https://pikachu-dev.azurewebsites.net",
