Implement Seq logs

--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -56,5 +56,9 @@
   },
   "HostDomain": {
     "Name": "ibosshops"
+  },
+  "SeqLog": {
+    "ServerUrl": "https://log.kooco.co",
+    "ApiKey": "BUKZjiBepMFCOsuuDqqM"
   }
 }
