--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -42,7 +42,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.4" />
       <PackageReference Include="MudBlazor" Version="7.1.1" />
       <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
-        <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+      <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+	  <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="8.1.1" />
 
         <PackageReference Include="Blazorise" Version="1.5.2" />
@@ -70,6 +71,10 @@
     <PackageReference Include="Volo.Abp.Identity.Blazor.Server" Version="8.1.1" />
     <PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" Version="8.1.1" />
     <PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" Version="8.1.1" />
+     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.Debug" Version="3.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
