--- a/src/Kooco.Pikachu.Domain.Shared/Kooco.Pikachu.Domain.Shared.csproj
+++ b/src/Kooco.Pikachu.Domain.Shared/Kooco.Pikachu.Domain.Shared.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="8.1.1" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="8.1.1" />
     <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="8.1.1" />
