Commit For PK-880

--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -48,11 +48,11 @@
     "PrintFAMIC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintFAMIC2COrderInfo"
   },
   "T-Cat": {
-    "PrintOBT": "https://api.suda.com.tw/api/Egs/PrintOBT",
-    "PrintOBTByB2S": "https://api.suda.com.tw/api/Egs/PrintOBTByB2S",
+    "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
+    "PrintOBTByB2S": "https://egs.suda.com.tw:8443/api/Egs/PrintOBTByB2S",
     "DownloadOBT": "https://egs.suda.com.tw:8443/api/Egs/DownloadOBT",
-    //"OBTStatus": "https://egs.suda.com.tw:8443/api/Egs/OBTStatus"
-    "OBTStatus": "https://api.suda.com.tw/api/Egs/OBTStatus"
+    "OBTStatus": "https://egs.suda.com.tw:8443/api/Egs/OBTStatus"
+    //"OBTStatus": "https://api.suda.com.tw/api/Egs/OBTStatus"
   },
   "HostDomain": {
     "Name": "ibosshops"
