#PK-28 LinePay - Request payment

--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -40,5 +40,12 @@
   "HostDomain": {
     "Name": "ibosshops"
   },
+  "PaymentGateway": {
+    "LinePay": {
+      "ApiBaseUrl": "https://sandbox-api-pay.line.me",
+      "PaymentApiPath": "/v3/payments/request",
+      "SuccessReturnCode": "0000"
+    }
+  },
   "DetailedErrors": true
 }
