#PK-28 Line pay create payment

--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -44,6 +44,7 @@
     "LinePay": {
       "ApiBaseUrl": "https://sandbox-api-pay.line.me",
       "PaymentApiPath": "/v3/payments/request",
+      "ConfirmPaymentApiPath": "/v3/payments/{0}/confirm",
       "SuccessReturnCode": "0000"
     }
   },
