--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -57,6 +57,14 @@
   "HostDomain": {
     "Name": "ibosshops"
   },
+  "PaymentGateway": {
+    "LinePay": {
+      "ApiBaseUrl": "https://sandbox-api-pay.line.me",
+      "PaymentApiPath": "/v3/payments/request",
+      "ConfirmPaymentApiPath": "/v3/payments/{0}/confirm",
+      "SuccessReturnCode": "0000"
+    }
+  },
   "SeqLog": {
     "ServerUrl": "https://log.kooco.co",
     "ApiKey": "BUKZjiBepMFCOsuuDqqM"
