Updated to ABP 9

--- a/src/Kooco.Pikachu.DbMigrator/Properties/launchSettings.json
+++ b/src/Kooco.Pikachu.DbMigrator/Properties/launchSettings.json
@@ -3,6 +3,10 @@
     "WSL": {
       "commandName": "WSL2",
       "distributionName": ""
+    },
+    "ConsoleApp": {
+      "commandName": "Project",
+      "distributionName": ""
     }
   }
 }
