--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
@@ -23,58 +23,58 @@
 
   <ItemGroup>
 
-      <PackageReference Include="AntDesign" Version="0.20.4.2" />
+      <PackageReference Include="AntDesign" Version="1.1.4" />
 
-      <PackageReference Include="Blazored.TextEditor" Version="1.1.0" />
+      <PackageReference Include="Blazored.TextEditor" Version="1.1.2" />
 
-      <PackageReference Include="Blazorise.LoadingIndicator" Version="1.5.2" />
+      <PackageReference Include="Blazorise.LoadingIndicator" Version="1.7.3" />
 
-      <PackageReference Include="Hangfire.Core" Version="1.8.12" />
+      <PackageReference Include="Hangfire.Core" Version="1.8.17" />
 
-      <PackageReference Include="Hangfire.SqlServer" Version="1.8.12" />
+      <PackageReference Include="Hangfire.SqlServer" Version="1.8.17" />
 
-      <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.72" />
 
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
         <PrivateAssets>all</PrivateAssets>
         <!-- <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets> -->
       </PackageReference>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.4" />
-      <PackageReference Include="MudBlazor" Version="7.1.1" />
-      <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.1" />
+      <PackageReference Include="MudBlazor" Version="8.1.0" />
+      <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
       <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
 	  <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="8.1.1" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="9.0.4" />
 
-        <PackageReference Include="Blazorise" Version="1.5.2" />
-        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.5.2" />
-        <PackageReference Include="Blazorise.Snackbar" Version="1.5.2" />
-        <PackageReference Include="Blazorise.Components" Version="1.5.2" />
-        <PackageReference Include="Blazorise.Bootstrap5" Version="1.5.2" />
-        <PackageReference Include="Blazorise.DataGrid" Version="1.5.2" />
-        <PackageReference Include="Blazorise.RichTextEdit" Version="1.5.2" />
-        <PackageReference Include="Blazorise.AntDesign" Version="1.5.2" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="3.1.0-rc.2" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.LeptonXLiteTheme" Version="3.1.0-rc.2" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="8.1.1" />
-        <PackageReference Include="Volo.Abp.HangFire" Version="8.1.1" />
+        <PackageReference Include="Blazorise" Version="1.7.3" />
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.7.3" />
+        <PackageReference Include="Blazorise.Snackbar" Version="1.7.3" />
+        <PackageReference Include="Blazorise.Components" Version="1.7.3" />
+        <PackageReference Include="Blazorise.Bootstrap5" Version="1.7.3" />
+        <PackageReference Include="Blazorise.DataGrid" Version="1.7.3" />
+        <PackageReference Include="Blazorise.RichTextEdit" Version="1.7.3" />
+        <PackageReference Include="Blazorise.AntDesign" Version="1.7.3" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="4.0.5" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.LeptonXLiteTheme" Version="4.0.5" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="9.0.4" />
+        <PackageReference Include="Volo.Abp.HangFire" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Kooco.Pikachu.Application\Kooco.Pikachu.Application.csproj" />
     <ProjectReference Include="..\Kooco.Pikachu.HttpApi\Kooco.Pikachu.HttpApi.csproj" />
     <ProjectReference Include="..\Kooco.Pikachu.EntityFrameworkCore\Kooco.Pikachu.EntityFrameworkCore.csproj" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="8.1.1" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="8.1.1" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.1.1" />
-    <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="8.1.1" />
-    <PackageReference Include="Volo.Abp.Identity.Blazor.Server" Version="8.1.1" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" Version="8.1.1" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" Version="8.1.1" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.Identity.Blazor.Server" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" Version="9.0.4" />
      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="3.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
-    <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
