--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,10 +33,10 @@ jobs:
       includePreviewVersions: false
       version: ${{ variables.DOTNET_CORE_VERSION }}
       
-  - script: dotnet restore "${{ variables.WORKING_DIRECTORY }}"
+  - script: dotnet restore "${{ variables.WORKING_DIRECTORY }}" --no-cache
     displayName: 'Restore'
 
-  - script: dotnet build "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-restore 
+  - script: dotnet build "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-restore --no-incremental
     displayName: 'Build'
 
 
