Revert "Update azure-pipelines.yml for Azure Pipelines"
This reverts commit 59733bba7eeba52df4bff7a0acccd197c555c652.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,10 +33,10 @@ jobs:
       includePreviewVersions: false
       version: ${{ variables.DOTNET_CORE_VERSION }}
       
-  - script: dotnet restore "${{ variables.WORKING_DIRECTORY }}" --no-cache
+  - script: dotnet restore "${{ variables.WORKING_DIRECTORY }}"
     displayName: 'Restore'
 
-  - script: dotnet build "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-restore --no-incremental
+  - script: dotnet build "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-restore 
     displayName: 'Build'
 
 
