--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,10 +21,11 @@ variables:
 
 jobs:
 - job: build
-  #pool:
-    #name: KOOCO Build Agent
   pool:
-    vmImage: 'windows-latest'
+    name: KOOCO Build Agent
+  #pool:
+    #vmImage: 'windows-latest'
+
   steps:
   - checkout: self
   - task: UseDotNet@2
