--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
 
   "ConnectionStrings": {
+    //"Default":"Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-db-prod;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     "Default": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-db-dev;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AuthServer": {
@@ -33,10 +34,25 @@
     "HashKey": "MqPualB34qDhv6wO",
     "HashIV": "9oZiHmM977DkgLrl",
     "MerchantID": "3252187",
-    "E-MAPApi": "https://logistics.ecpay.com.tw/Home/Family",
+    "E-MAPApi": "https://logistics-stage.ecpay.com.tw/Home/Family",
     "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
     "InvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Issue",
-    "VoidInvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Invalid"
+    "CreditNoteApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Allowance",
+    "VoidInvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Invalid",
+    "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData",
+    "SingleCreditCardTransactionApi": "https://payment-stage.ecPay.com.tw/CreditDetail/QueryTrade/V2",
+    "SenderZipCode": "https://egs.suda.com.tw:8443/api/Egs/ParsingAddress",
+    "PaymentApiUrl": "https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5",
+    "PrintTradeDocument": "https://logistics-stage.ecpay.com.tw/helper/printTradeDocument",
+    "PrintUniMartC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintUniMartC2COrderInfo",
+    "PrintFAMIC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintFAMIC2COrderInfo"
+  },
+  "T-Cat": {
+    "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
+    "PrintOBTByB2S": "https://egs.suda.com.tw:8443/api/Egs/PrintOBTByB2S",
+    "DownloadOBT": "https://egs.suda.com.tw:8443/api/Egs/DownloadOBT",
+    "OBTStatus": "https://egs.suda.com.tw:8443/api/Egs/OBTStatus"
+    //"OBTStatus": "https://api.suda.com.tw/api/Egs/OBTStatus"
   },
   "HostDomain": {
     "Name": "ibosshops"
