--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "Default": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-db-dev;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "HangFire": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-hangfire-dev;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  
   },
   "AuthServer": {
     "Authority": "https://pikachu-dev.azurewebsites.net",
@@ -36,17 +37,17 @@
     "HashIV": "gEDzzSvxugbBxrRz",
     "MerchantID": "3345125",
     "E-MAPApi": "https://logistics.ecpay.com.tw/Home/Family",
-    "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
-    "InvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Issue",
-    "CreditNoteApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Allowance",
-    "VoidInvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Invalid",
-    "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData",
+    "LogisticApi": "https://logistics.ecpay.com.tw/Express/Create",
+    "InvoiceApi": "https://einvoice.ecpay.com.tw/B2CInvoice/Issue",
+    "CreditNoteApi": "https://einvoice.ecpay.com.tw/B2CInvoice/Allowance",
+    "VoidInvoiceApi": "https://einvoice.ecpay.com.tw/B2CInvoice/Invalid",
+    "TestLabelApi": "https://logistics.ecpay.com.tw/Express/CreateTestData",
     "SingleCreditCardTransactionApi": "https://payment.ecPay.com.tw/CreditDetail/QueryTrade/V2",
     "SenderZipCode": "https://egs.suda.com.tw:8443/api/Egs/ParsingAddress",
     "PaymentApiUrl": "https://payment.ecpay.com.tw/Cashier/AioCheckOut/V5",
-    "PrintTradeDocument": "https://logistics-stage.ecpay.com.tw/helper/printTradeDocument",
-    "PrintUniMartC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintUniMartC2COrderInfo",
-    "PrintFAMIC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintFAMIC2COrderInfo"
+    "PrintTradeDocument": "https://logistics.ecpay.com.tw/helper/printTradeDocument",
+    "PrintUniMartC2COrderInfo": "https://logistics.ecpay.com.tw/Express/PrintUniMartC2COrderInfo",
+    "PrintFAMIC2COrderInfo": "https://logistics.ecpay.com.tw/Express/PrintFAMIC2COrderInfo"
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
