Commit For Pk-1165

--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -47,7 +47,8 @@
     "PaymentApiUrl": "https://payment.ecpay.com.tw/Cashier/AioCheckOut/V5",
     "PrintTradeDocument": "https://logistics.ecpay.com.tw/helper/printTradeDocument",
     "PrintUniMartC2COrderInfo": "https://logistics.ecpay.com.tw/Express/PrintUniMartC2COrderInfo",
-    "PrintFAMIC2COrderInfo": "https://logistics.ecpay.com.tw/Express/PrintFAMIC2COrderInfo"
+    "PrintFAMIC2COrderInfo": "https://logistics.ecpay.com.tw/Express/PrintFAMIC2COrderInfo",
+    "QueryLogisticsTradeInfo": "https://logistics.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V3"
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
