--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -28,12 +28,11 @@
   },
   "EntryUrl": "https://groupbuy-dev.ibosshops.com/",
   "EcPay": {
-    //"HashKey": "5294y06JbISpM5x9",
-    //"HashIV": "v77hoKGq4kWxNNIS",
-    //"MerchantID": "2000132",
+
     "HashKey": "MqPualB34qDhv6wO",
     "HashIV": "9oZiHmM977DkgLrl",
     "MerchantID": "3252187",
+    
     "E-MAPApi": "https://logistics-stage.ecpay.com.tw/Home/Family",
     "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
     "InvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Issue",
@@ -45,7 +44,9 @@
     "PaymentApiUrl": "https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5",
     "PrintTradeDocument": "https://logistics-stage.ecpay.com.tw/helper/printTradeDocument",
     "PrintUniMartC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintUniMartC2COrderInfo",
-    "PrintFAMIC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintFAMIC2COrderInfo"
+    "PrintFAMIC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintFAMIC2COrderInfo",
+    "QueryLogisticsTradeInfo": "https://logistics-stage.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V3"
+    
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
