feat: 🎸 增加租戶錢包頁面

--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -141,4 +141,9 @@
   <ItemGroup>
     <Folder Include="wwwroot\libs\DinkToPdf\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="Kooco.Pikachu.Blazor" />
+  </ItemGroup>
+  
 </Project>
