feat: 🎸 增加租戶錢包加值扣款

--- a/src/Kooco.Pikachu.Domain.Shared/Kooco.Pikachu.Domain.Shared.csproj
+++ b/src/Kooco.Pikachu.Domain.Shared/Kooco.Pikachu.Domain.Shared.csproj
@@ -33,4 +33,9 @@
   <ItemGroup>
     <None Remove="Items\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Localization\PageLayout\en.json" />
+    <EmbeddedResource Include="Localization\PageLayout\zh-Hant.json" />
+  </ItemGroup>
 </Project>
