--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -33,6 +33,7 @@
     //"HashKey": "5294y06JbISpM5x9",
     //"HashIV": "v77hoKGq4kWxNNIS",
     //"MerchantID": "2000132",
+    "IsFormalArea": false,
     "HashKey": "hxiE9LaFS9nMXb0a",
     "HashIV": "gEDzzSvxugbBxrRz",
     "MerchantID": "3345125",
