--- a/src/Kooco.Pikachu.ECPay/Kooco.Pikachu.ECPay.csproj
+++ b/src/Kooco.Pikachu.ECPay/Kooco.Pikachu.ECPay.csproj
@@ -8,8 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
-    <PackageReference Include="Volo.Abp.Core" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.Http.Client" Version="9.0.4" />
   </ItemGroup>
 
 </Project>
