--- a/lib/Kooco.Core/Kooco.Core.csproj
+++ b/lib/Kooco.Core/Kooco.Core.csproj
@@ -4,11 +4,11 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>Kooco.Pikachu</RootNamespace>
+    <RootNamespace />
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.Core" Version="9.0.4" />
   </ItemGroup>
 
 </Project>
