Pk 1321 發票表結構設計 (#36)
* feat: 🎸 重構發票功能

* refactor: 💡 建立 ECPay 標準庫

--- a/lib/Kooco.Core/Kooco.Core.csproj
+++ b/lib/Kooco.Core/Kooco.Core.csproj
@@ -4,11 +4,10 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>Kooco.Pikachu</RootNamespace>
+    <RootNamespace />
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.Core" Version="9.0.4" />
   </ItemGroup>
 
