--- a/src/Kooco.Pikachu.Domain.Shared/Kooco.Pikachu.Domain.Shared.csproj
+++ b/src/Kooco.Pikachu.Domain.Shared/Kooco.Pikachu.Domain.Shared.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>Kooco.Pikachu</RootNamespace>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
