--- a/lib/Kooco.Core/Kooco.Core.csproj
+++ b/lib/Kooco.Core/Kooco.Core.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Core" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.ObjectMapping" Version="9.0.4" />
   </ItemGroup>
 
 </Project>
