--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     "Default": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-db-dev;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "HangFire": "Server=tcp:dev-kdbs.database.windows.net,1433;Initial Catalog=pikachu-hangfire-dev;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  
+
   },
   "AuthServer": {
     "Authority": "https://pikachu-dev.azurewebsites.net",
@@ -73,5 +73,8 @@
   "SeqLog": {
     "ServerUrl": "https://log.kooco.co",
     "ApiKey": "BUKZjiBepMFCOsuuDqqM"
+  },
+  "Settings": {
+    "Abp.Localization.DefaultLanguage": "zh-Hant"
   }
 }
