--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -29,11 +29,15 @@
 
     <PackageReference Include="Blazorise.Cropper" Version="1.7.3" />
 
+    <PackageReference Include="Blazorise.FluentValidation" Version="1.7.3" />
+
     <PackageReference Include="Blazorise.LoadingIndicator" Version="1.7.3" />
 
     <PackageReference Include="Blazorise.Splitter" Version="1.7.3" />
 
     <PackageReference Include="DinkToPdf" Version="1.0.8" />
+
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
 
     <PackageReference Include="Hangfire.SqlServer" Version="1.8.14" />
 
