Fix Certificate Issue

--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -19,7 +19,7 @@
   },
   "MyAppCertificate": {
     "X590": {
-      "PassWord": "Koo2915co"
+      "Password": "Koo2915co"
     }
   },
   "AzureStorageAccountSettings": {
