--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -20,7 +20,7 @@
   },
   "MyAppCertificate": {
     "X590": {
-      "PassWord": "Koo2915co"
+      "Password": "Koo2915co"
     }
   },
   "AzureStorageAccountSettings": {
