--- a/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
+++ b/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
@@ -31,6 +31,7 @@
 	  <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
 	  <PackageReference Include="DinkToPdf" Version="1.0.8" />
 	  <PackageReference Include="ECPay.Payment.Integration" Version="1.0.0.8" />
+	  <PackageReference Include="EPPlus" Version="8.0.3" />
 	  <PackageReference Include="HtmlSanitizer" Version="9.0.876" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
 	  <PackageReference Include="MiniExcel" Version="1.37.0" />
