#PK-1485 Image compressor service

--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -76,5 +76,9 @@
   },
   "Settings": {
     "Abp.Localization.DefaultLanguage": "zh-Hant"
+  },
+  "ImageCompressor": {
+    "ApiBaseUrl": "https://kimage-function.azurewebsites.net/api",
+    "PassKey": "29152407"
   }
 }
