--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -67,5 +67,9 @@
       "SuccessReturnCode": "0000"
     }
   },
-  "DetailedErrors": true
+  "DetailedErrors": true,
+  "ImageCompressor": {
+    "ApiBaseUrl": "https://kimage-function.azurewebsites.net/api",
+    "PassKey": "29152407"
+  }
 }
