Commit For Pk-1511

--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "App": {
-    "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://www.goodpoint.tw,https://pikachu-store-production.azurewebsites.net, https://*.ecpay.com.tw, https://*.jsvhub.com",
+    "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://www.goodpoint.tw,https://pikachu-store-production.azurewebsites.net, https://*.ecpay.com.tw, https://*.jsvhub.com ,http://localhost:4000",
     "RedirectAllowedUrls": "https://pikachu-dev.azurewebsites.net",
     "SelfUrl": "https://pikachu-dev.azurewebsites.net",
     "EmailQuotaExceededNotifyUrl": "https://n8nhook.kooco.co/webhook/cf26d9e0-844c-4fb0-a75f-8630c93f5d1c"
