--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -2,7 +2,7 @@
   "App": {
     "SelfUrl": "https://localhost:44374",
     "RedirectAllowedUrls": "https://localhost:44374",
-    "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://koocopikachustore.azurewebsites.net, https://www.goodpoint.tw, https://*.ecpay.com.tw",
+    "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://koocopikachustore.azurewebsites.net, https://www.goodpoint.tw, https://*.ecpay.com.tw, http://localhost:4000",
     "EmailQuotaExceededNotifyUrl": "https://n8nhook.kooco.co/webhook/cf26d9e0-844c-4fb0-a75f-8630c93f5d1c"
   },
 
