--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -42,7 +42,7 @@
     "InvoiceApi": "https://einvoice.ecpay.com.tw/B2CInvoice/Issue",
     "CreditNoteApi": "https://einvoice.ecpay.com.tw/B2CInvoice/Allowance",
     "VoidInvoiceApi": "https://einvoice.ecpay.com.tw/B2CInvoice/Invalid",
-    "TestLabelApi": "https://logistics.ecpay.com.tw/Express/CreateTestData",
+    "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData",
     "SingleCreditCardTransactionApi": "https://payment.ecPay.com.tw/CreditDetail/QueryTrade/V2",
     "SenderZipCode": "https://egs.suda.com.tw:8443/api/Egs/ParsingAddress",
     "PaymentApiUrl": "https://payment.ecpay.com.tw/Cashier/AioCheckOut/V5",
