--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -30,26 +30,25 @@
   },
   "EntryUrl": "https://groupbuy-dev.ibosshops.com/",
   "EcPay": {
-    //"HashKey": "5294y06JbISpM5x9",
-    //"HashIV": "v77hoKGq4kWxNNIS",
-    //"MerchantID": "2000132",
-    "IsFormalArea": false,
-    "HashKey": "hxiE9LaFS9nMXb0a",
-    "HashIV": "gEDzzSvxugbBxrRz",
-    "MerchantID": "3345125",
-    "E-MAPApi": "https://logistics.ecpay.com.tw/Home/Family",
-    "LogisticApi": "https://logistics.ecpay.com.tw/Express/Create",
+
+    "HashKey": "MqPualB34qDhv6wO",
+    "HashIV": "9oZiHmM977DkgLrl",
+    "MerchantID": "3252187",
+
+    "E-MAPApi": "https://logistics-stage.ecpay.com.tw/Home/Family",
+    "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
     "InvoiceApi": "https://einvoice.ecpay.com.tw/B2CInvoice/Issue",
     "CreditNoteApi": "https://einvoice.ecpay.com.tw/B2CInvoice/Allowance",
     "VoidInvoiceApi": "https://einvoice.ecpay.com.tw/B2CInvoice/Invalid",
     "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData",
-    "SingleCreditCardTransactionApi": "https://payment.ecPay.com.tw/CreditDetail/QueryTrade/V2",
+    "SingleCreditCardTransactionApi": "https://payment-stage.ecPay.com.tw/CreditDetail/QueryTrade/V2",
     "SenderZipCode": "https://egs.suda.com.tw:8443/api/Egs/ParsingAddress",
-    "PaymentApiUrl": "https://payment.ecpay.com.tw/Cashier/AioCheckOut/V5",
-    "PrintTradeDocument": "https://logistics.ecpay.com.tw/helper/printTradeDocument",
-    "PrintUniMartC2COrderInfo": "https://logistics.ecpay.com.tw/Express/PrintUniMartC2COrderInfo",
-    "PrintFAMIC2COrderInfo": "https://logistics.ecpay.com.tw/Express/PrintFAMIC2COrderInfo",
-    "QueryLogisticsTradeInfo": "https://logistics.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V3"
+    "PaymentApiUrl": "https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5",
+    "PrintTradeDocument": "https://logistics-stage.ecpay.com.tw/helper/printTradeDocument",
+    "PrintUniMartC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintUniMartC2COrderInfo",
+    "PrintFAMIC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintFAMIC2COrderInfo",
+    "QueryLogisticsTradeInfo": "https://logistics-stage.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V3"
+
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
@@ -57,9 +56,6 @@
     "DownloadOBT": "https://egs.suda.com.tw:8443/api/Egs/DownloadOBT",
     "OBTStatus": "https://egs.suda.com.tw:8443/api/Egs/OBTStatus"
     //"OBTStatus": "https://api.suda.com.tw/api/Egs/OBTStatus"
-  },
-  "HostDomain": {
-    "Name": "ibosshops"
   },
   "PaymentGateway": {
     "LinePay": {
