--- a/src/Kooco.Pikachu.Domain.Shared/Kooco.Pikachu.Domain.Shared.csproj
+++ b/src/Kooco.Pikachu.Domain.Shared/Kooco.Pikachu.Domain.Shared.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="9.0.4" />
