#PK-1508 Update T-Cat FTP syncing

--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -53,11 +53,7 @@
     "PrintOBTByB2S": "https://egs.suda.com.tw:8443/api/Egs/PrintOBTByB2S",
     "DownloadOBT": "https://egs.suda.com.tw:8443/api/Egs/DownloadOBT",
     "OBTStatus": "https://egs.suda.com.tw:8443/api/Egs/OBTStatus",
-    //"OBTStatus": "https://api.suda.com.tw/api/Egs/OBTStatus",
-    "Host": "103.234.81.11",
-    "Port": 22,
-    "Username": "KGO",
-    "Password": "K2025G05O08"
+    //"OBTStatus": "https://api.suda.com.tw/api/Egs/OBTStatus"
   },
   "HostDomain": {
     "Name": "ibosshops"
