pipeline build fix

--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -54,7 +54,7 @@
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
     "PrintOBTByB2S": "https://egs.suda.com.tw:8443/api/Egs/PrintOBTByB2S",
     "DownloadOBT": "https://egs.suda.com.tw:8443/api/Egs/DownloadOBT",
-    "OBTStatus": "https://egs.suda.com.tw:8443/api/Egs/OBTStatus",
+    "OBTStatus": "https://egs.suda.com.tw:8443/api/Egs/OBTStatus"
     //"OBTStatus": "https://api.suda.com.tw/api/Egs/OBTStatus"
   },
   "PaymentGateway": {
