--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -3,7 +3,8 @@
     "SelfUrl": "https://localhost:44374",
     "RedirectAllowedUrls": "https://localhost:44374",
     "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://koocopikachustore.azurewebsites.net, https://www.goodpoint.tw, https://*.ecpay.com.tw, http://localhost:4000",
-    "EmailQuotaExceededNotifyUrl": "https://n8nhook.kooco.co/webhook/cf26d9e0-844c-4fb0-a75f-8630c93f5d1c"
+    "EmailQuotaExceededNotifyUrl": "https://n8nhook.kooco.co/webhook/cf26d9e0-844c-4fb0-a75f-8630c93f5d1c",
+    "GroupBuyReportUrl": "https://groupbuy-report-dev.ibosshops.com/"
   },
 
   "ConnectionStrings": {
